--- a/case01.html
+++ b/case01.html
@@ -52,12 +52,12 @@
     <!-- Light Panel -->
     <section id="light-panel">
 
-        <div class="light"></div> <!-- light 01 -->
-        <div class="light"></div> <!-- light 02 -->
-        <div class="light"></div> <!-- light 03 -->
-        <div class="light"></div> <!-- light 04 -->
-        <div class="light"></div> <!-- light 05 -->
-        <div class="light"></div> <!-- light 06 -->
+        <div class="light"></div>
+        <div class="light"></div>
+        <div class="light"></div>
+        <div class="light"></div>
+        <div class="light"></div>
+        <div class="light"></div>
 
     </section>
     <!-- Button Panel -->
